category in languages, custom cat fields, ui changes, audio files

--- a/wp-content/themes/tofra-natureminded/style-rtl.css
+++ b/wp-content/themes/tofra-natureminded/style-rtl.css
@@ -83,6 +83,10 @@ a:hover {
 	content: none !important;
 }
 
+.owl-page{
+	display: none !important;
+}
+
 
 /*Boxed Layout
 ------------------------------------*/
